--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,8 +1,9 @@
 android.useAndroidX=true
 android.enableJetifier=true
 FLIPPER_VERSION=0.99.0
+org.gradle.jvmargs=-Xmx4608m
 
 MYAPP_RELEASE_STORE_FILE=release.keystore
 MYAPP_RELEASE_KEY_ALIAS=release
-MYAPP_RELEASE_STORE_PASSWORD=reactnative
-MYAPP_RELEASE_KEY_PASSWORD=reactnative
+MYAPP_RELEASE_STORE_PASSWORD=Nagarani09!!
+MYAPP_RELEASE_KEY_PASSWORD=Nagarani09!!
