--- a/package.json
+++ b/package.json
@@ -12,18 +12,30 @@
   "dependencies": {
     "@nozbe/watermelondb": "^0.24.0",
     "@nozbe/with-observables": "^1.4.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
     "react": "17.0.2",
-    "react-native": "0.66.1"
+    "react-native": "0.66.4",
+    "react-native-bootsplash": "^4.0.2",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-decorators": "^7.16.0",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-proposal-decorators": "^7.16.5",
+    "@babel/runtime": "^7.16.5",
+    "@react-native-community/eslint-config": "^3.0.1",
+    "@types/react": "^17.0.38",
+    "@types/react-native": "^0.66.9",
+    "babel-jest": "^27.4.5",
+    "eslint": "8.5.0",
+    "jest": "^27.4.5",
     "metro-react-native-babel-preset": "^0.66.2",
+    "npm-check-updates": "^12.0.5",
+    "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
