--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,6 +2,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 FLIPPER_VERSION=0.99.0
 org.gradle.jvmargs=-Xmx4608m
+AsyncStorage_db_size_in_MB=25
 
 MYAPP_RELEASE_STORE_FILE=release.keystore
 MYAPP_RELEASE_KEY_ALIAS=release
